<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_E6F1FF"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/activity_commtopmm" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6mm">

        <com.haier.cellarette.baselibrary.zuni.ZuniScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60mm"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10mm"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/logincommtextview"
                                android:text="@string/slb_my_tip1"
                                android:textColor="@color/black_000"
                                android:textSize="16mm" />

                            <TextView
                                style="@style/logincommtextview"
                                android:text="@string/slb_my_tip2"
                                android:textColor="@color/gray_list_head_text"
                                android:textSize="12mm" />
                        </LinearLayout>

                        <com.haier.cellarette.baselibrary.widget.SwitchButton
                            android:id="@+id/slb_sb1"
                            android:layout_width="50mm"
                            android:layout_height="28mm"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            app:sb_checked="false"
                            app:sb_show_indicator="false" />
                    </LinearLayout>

                    <com.haier.cellarette.baselibrary.widget.LxLinearLayout
                        android:id="@+id/ll_huyan1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/slb_my_btn_comm_trans"
                        android:orientation="vertical" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/view_line_colorEBEBEB" />

                <LinearLayout
                    android:id="@+id/ll_xgmm"
                    android:layout_width="match_parent"
                    android:layout_height="60mm"
                    android:background="@drawable/slb_my_btn_comm"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10mm"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingTop="10mm"
                        android:paddingBottom="10mm">

                        <TextView
                            style="@style/logincommtextview"
                            android:text="@string/slb_my_tip5"
                            android:textColor="@color/black_000"
                            android:textSize="16mm" />

                        <TextView
                            style="@style/logincommtextview"
                            android:text="@string/slb_my_tip6"
                            android:textColor="@color/gray_list_head_text"
                            android:textSize="12mm"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6mm"
                        android:background="@drawable/slb_back" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/view_line_colorEBEBEB" />

                <LinearLayout
                    android:id="@+id/ll_jcgx"
                    android:layout_width="match_parent"
                    android:layout_height="60mm"
                    android:background="@drawable/slb_my_btn_comm"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10mm"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingTop="10mm"
                        android:paddingBottom="10mm">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/logincommtextview"
                                android:text="@string/slb_my_tip9"
                                android:textColor="@color/black_000"
                                android:textSize="16mm" />

                            <TextView
                                android:id="@+id/tv_versoncode"
                                style="@style/logincommtextview"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="V1.00"
                                android:textColor="@color/black_000"
                                android:textSize="16mm" />
                        </LinearLayout>

                        <TextView
                            style="@style/logincommtextview"
                            android:text="@string/slb_my_tip6"
                            android:textColor="@color/gray_list_head_text"
                            android:textSize="12mm"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6mm"
                        android:background="@drawable/slb_back" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/view_line_colorEBEBEB" />

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="60mm"
                    android:background="@drawable/slb_my_btn_comm"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10mm">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/logincommtextview"
                            android:text="@string/slb_my_tip3"
                            android:textColor="@color/black_000"
                            android:textSize="16mm" />

                        <TextView
                            style="@style/logincommtextview"
                            android:text="@string/slb_my_tip4"
                            android:textColor="@color/gray_list_head_text"
                            android:textSize="12mm" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv1"
                        style="@style/logincommtextview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00B"
                        android:textColor="@color/color_ff11B5AF"
                        android:textSize="12mm" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/view_line_colorEBEBEB" />

                <LinearLayout
                    android:id="@+id/ll_tcdl"
                    android:layout_width="match_parent"
                    android:layout_height="60mm"
                    android:background="@drawable/slb_my_btn_comm"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10mm"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingTop="10mm"
                        android:paddingBottom="10mm">

                        <TextView
                            android:id="@+id/tv_login3out2"
                            style="@style/logincommtextview"
                            android:text="@string/slb_my_tip55"
                            android:textColor="@color/black_000"
                            android:textSize="16mm" />

                        <TextView
                            style="@style/logincommtextview"
                            android:text="@string/slb_my_tip6"
                            android:textColor="@color/gray_list_head_text"
                            android:textSize="12mm"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6mm"
                        android:background="@drawable/slb_back" />

                </LinearLayout>
            </LinearLayout>

        </com.haier.cellarette.baselibrary.zuni.ZuniScrollView>
    </FrameLayout>

</LinearLayout>
